# xlavir

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  report.xlsx  setup.cfg  setup.py  xlavir-report.xlsx
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: branch.yml  ci.yml  pypi_deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_io_ct.py  test_tools_fastp.py  test_tools_nextflow.py  test_vcf_parsing.py  test_xlavir.py
tests/data/io/: ct.ods  ct.tsv  ct.xlsx
tests/data/tools/consensus/: Sample1.consensus.fa  Sample2.consensus.fa  Sample3.consensus.fa
tests/data/tools/fastp/: Sample1.fastp.json  Sample2.fastp.json
tests/data/tools/nextflow/: execution_report.html
tests/data/tools/pangolin/: pangolin.lineage_report.csv
tests/data/tools/samtools/: Sample1.flagstat  Sample2.flagstat  Sample3.flagstat
tests/data/tools/variants/nanopolish/: Sample3.snpsift.txt
tests/data/vcfs/bcftools/: Sample1.vcf
tests/data/vcfs/clair3/: Sample1.clair3.vcf
tests/data/vcfs/ivar/: Sample1.vcf
xlavir/: __init__.py  cli.py  images.py  util.py  xlavir.py
xlavir/io/: ct.py  excel_sheet_dataframe.py  xl.py
xlavir/qc/: __init__.py  quality_requirements.py
xlavir/tools/: consensus.py  fastp.py  mosdepth.py  nextclade.py  pangolin.py  samtools.py  variants.py
xlavir/tools/nextflow/: exec_report.py
